add version on the composer json

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "version": "1.0.0-alpha1",
     "name": "gytree/php-react",
     "description": "A simple react wrapper to php projects",
     "type": "library",
